[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/planetMenu/planetButton.gd" type="Script" id=1]
[ext_resource path="res://baseTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/planetMenu/planetButtonBase.png" type="Texture" id=3]
[ext_resource path="res://Roboto-Black.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/planetMenu/planetButtonBasePressed.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 4 )

[node name="Button" type="TextureButton"]
margin_right = 89.0
margin_bottom = 32.0
theme = ExtResource( 2 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 152.0
margin_bottom = 48.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "test"
align = 1
valign = 1

[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
